# mesh2usd

./: .gitignore  CMakeLists.txt  main.cpp  usd_data.h
cmake/: FindOpenImageIO.cmake  Findmeshoptimizer.cmake  Findtinygltf.cmake  Findufbx.cmake  compiler_config.cmake
